# AuthVision

./: .env.example  .gitignore  COMMANDS.md  DEPLOYMENT-QUICK.md  DEPLOYMENT.md  FILE_TREE.md  MLproject  MODULE2_STREAMING.md  MODULE_1_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  STREAMING_GUIDE.md  VALIDATION_CHECKLIST.md  analyze_app.py  analyze_stream_logic.py  check_dbs.py  check_model_server_db.py  conda.yaml  deploy_recognition_patch.py  extract_live_feed.py  patch_live_feed.py  patch_live_feed_v2.py  pyproject.toml  pytest.ini  python deploy_recognition_patch.py  requirements.txt  run_server.py  setup-deployment.ps1  setup-deployment.sh  setup.ps1  start-dev.ps1  start-server.ps1  sync_students.py  temp_app_filter_fix.js  temp_app_fix.js  test-api.ps1  test-streaming.ps1  test_model_server.py  test_module1.ps1  (+5 more)
.github/workflows/: ci.yml
Authvision_Frontend/: index.html  package-lock.json  package.json  quick_start.txt  setup.bat
Authvision_Frontend/DOCUMENTS/: API INTEGRATION WITH FRONTEND.docx  AUTHVISION FRONT END BASIC FUNCTIONALITIES.docx  MODIFICATIONS.docx  WORKING STEPS.docx
Authvision_Frontend/MODIFICATION_CODES/: ClassAttendance.jsx  apiClient.js  recognitionClient.js  websocketClient.js
Authvision_Frontend/public/: config.json
Authvision_Frontend/src/: App.jsx  styles.css
Authvision_Frontend/src/components/: ImageUploader.jsx  Sidebar.jsx  StreamViewer.jsx  Topbar.jsx
Authvision_Frontend/src/hooks/: useAuth.js  useWebSocket.js
docker/: Dockerfile.edge  Dockerfile.server
infra/: canary_rollout.yaml  k8s_deploy.yaml
main_backend/: .env  README.md  __init__.py  __main__.py  check_db_path.py  cleanup_db_paths.py  config.py  hypercorn_config.py  main.py  main.py.log.2025-12-09  migrate_remove_enrollments.py  requirements.txt  run.py  run_hypercorn.py  verify_setup.py
main_backend/app/: auth.py  config.py  database.py  dependencies.py  models.py  schemas.py
main_backend/routers/: attendance.py  auth.py  conferences.py  departments.py  faculty.py  reports.py  streaming.py  students.py  subjects.py
main_backend/services/: attendance.py  auth.py  db.py  model_client.py  models.py  stream.py  ws_manager.py
main_backend/static/: app.js  conference.html  conference.js  dashboard.html  index.html  style.css
main_backend/templates/: report_student.html  report_subject.html
main_backend/tests/: interactive_test.py
model_server/: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  set_cpu_env.ps1
model_server/app/: __init__.py  auth.py  auth_db.py  auth_db_old.py  auth_routes.py  config.py  detector.py  main.py  recognizer.py  server.py  tracker.py  utils.py
model_server/tests/: __init__.py
model_service/: README.md  __init__.py  __main__.py  arcface_refresh.py  config.py  main.py  requirements.txt  run_hypercorn.py  test_client.py
model_service/arcface_db/: ds_model_arcface_detector_yolov8n_aligned_normalization_arcface_expand_0.pkl
model_service/deepface_models/: model_service.log.2025-12-08  model_service.log.2025-12-09  model_service.log.2025-12-10
model_service/routes/: auth.py  detect.py  recognise.py  refresh_db.py
model_service/services/: arcface_refresh.py  auth.py  db.py  deepface_service.py  rate_limiter.py
model_service/tests/: test_auth_flow.py
scripts/: deploy_canary.sh  export_onnx.sh  quantize_onnx.sh  sign_model.sh
src/app/: __init__.py  deps.py  main.py
src/utils/: __init__.py  downloads.py  logging.py  security.py  timers.py
tests/: __init__.py
tests/unit/: __init__.py  test_bafs.py  test_frame_queue.py  test_routes.py
(+55 files in other folders)
