[project]
name = "smart-attendance"
version = "0.1.0"
description = "Production-grade Smart Attendance System with MLflow orchestration"
requires-python = "==3.12.8"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "hypercorn==0.17.3",
    "uvicorn==0.31.0",
    "python-multipart==0.0.12",
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "onnxruntime==1.19.2",
    "torch==2.5.0",
    "torchvision==0.20.0",
    "mlflow==2.17.0",
    "sqlalchemy==2.0.35",
    "cryptography==43.0.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "mypy==1.11.2",
    "black==24.10.0",
    "isort==5.13.2",
    "ruff==0.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app", "pipeline", "mlflow", "utils"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
