[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition-model-server"
version = "1.0.0"
description = "ArcFace Recognition and YOLO Detection Service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "hypercorn[trio]>=0.16.0",
    "python-multipart>=0.0.6",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "ultralytics>=8.1.0",
    "deepface>=0.0.87",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.3",
    "pillow>=10.2.0",
    "filterpy>=1.4.5",
    "scipy>=1.11.4",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
